Frontend login implementado

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,10 @@
 <resources>
     <string name="app_name">CineriesBox</string>
 
-    <string name="login_titulo">Iniciar Sesion</string>
+    <string name="login_titulo">INICIAR SESION</string>
+    <string name="lbl_ClavePerdida">Olvidé mi contraseña</string>
+    <string name="btn_Ingresar">Ingresar</string>
+    <string name="lbl_SinCuenta">¿No tienes una cuenta?</string>
+    <string name="lbl_Registrarme">Registrarme Ahora</string>
+
 </resources>
